--- a/thanks.html
+++ b/thanks.html
@@ -2162,6 +2162,54 @@
             <td>風のゆくえ</td>
             <td><a href="https://x.com/i/user/1942904158107131904">寝不足音鉄様</a></td>
           </tr>
+          <tr>
+            <td>A Whole New World</td>
+            <td><a href="https://x.com/i/user/1655138465284251649">チッフィー様</a></td>
+          </tr>
+          <tr>
+            <td>It's a Small World V2</td>
+            <td><a href="https://x.com/i/user/1655138465284251649">チッフィー様</a></td>
+          </tr>
+          <tr>
+            <td>輝く未来</td>
+            <td><a href="https://x.com/i/user/1655138465284251649">チッフィー様</a></td>
+          </tr>
+          <tr>
+            <td>Let It Go〜ありのままで〜 V2</td>
+            <td><a href="https://x.com/i/user/1655138465284251649">チッフィー様</a></td>
+          </tr>
+          <tr>
+            <td>君の願いが世界を輝かす</td>
+            <td>Yuma Dragons様</td>
+          </tr>
+          <tr>
+            <td>Living in Color</td>
+            <td>Yuma Dragons様</td>
+          </tr>
+          <tr>
+            <td>Zip-A-Dee-Doo-Dah</td>
+            <td><a href="https://x.com/i/user/1426497394565292032">鉄道チャンネル様</a></td>
+          </tr>
+          <tr>
+            <td>It's a Small World V1</td>
+            <td><a href="https://x.com/i/user/1426497394565292032">鉄道チャンネル様</a></td>
+          </tr>
+          <tr>
+            <td>Brand New Day verA</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>Brand New Day verB</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>When Your Heart Makes A Wish verA</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>When Your Heart Makes A Wish verB</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
