--- a/line/keiyo.html
+++ b/line/keiyo.html
@@ -70,8 +70,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_122548f2defa4ef7bdb728b452276e56~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_122548f2defa4ef7bdb728b452276e56~mv2.png" alt="舞浜駅">
-          <p>舞浜駅 【未収録】</p>
-<!--           <a href="../station/maihama.html"></a> -->
+          <p>舞浜駅</p>
+          <a href="../station/maihama.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_381bdf2d40064719ad30bed201c4583c~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_381bdf2d40064719ad30bed201c4583c~mv2.png" alt="新浦安駅">
