--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.6 南北線等 四ツ谷駅 #1(メトロ)･#2(メトロ)・飯田橋駅･#3(メトロ)･#4(メトロ)",
+            text: "【ページ追加】2026.2.8 京葉線 舞浜駅･#1･#2(2016/4/5導入「When Your Heart Makes A Wish」〜2025/6/6導入「A Whole New World」「It's a Small World V2」まで)",
             url: null
           },
           {
