--- a/line/keiyo.html
+++ b/line/keiyo.html
@@ -55,8 +55,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5b95734d8d9e4d98b08e063936da24ec~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5b95734d8d9e4d98b08e063936da24ec~mv2.png" alt="潮見駅">
-          <p>潮見駅 【未収録】</p>
-<!--           <a href="../station/shiomi.html"></a> -->
+          <p>潮見駅</p>
+          <a href="../station/shiomi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_eaa1ba6ad3894f4e80b954b7088fcf48~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_eaa1ba6ad3894f4e80b954b7088fcf48~mv2.png" alt="新木場駅">
