--- a/line/keiyo.html
+++ b/line/keiyo.html
@@ -80,8 +80,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_e283c1dad0b14c1fb55161d056226e11~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_e283c1dad0b14c1fb55161d056226e11~mv2.png" alt="市川塩浜駅">
-          <p>市川塩浜駅 【未収録】</p>
-<!--           <a href="../station/ichikawashiohama.html"></a> -->
+          <p>市川塩浜駅</p>
+          <a href="../station/ichikawashiohama.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_891a8080535c498da5576ae842b770f1~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_891a8080535c498da5576ae842b770f1~mv2.png" alt="二俣新町駅">
