--- a/line/keiyo.html
+++ b/line/keiyo.html
@@ -85,8 +85,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_891a8080535c498da5576ae842b770f1~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_891a8080535c498da5576ae842b770f1~mv2.png" alt="二俣新町駅">
-          <p>二俣新町駅 【未収録】</p>
-<!--           <a href="../station/hutamatashimmachi.html"></a> -->
+          <p>二俣新町駅</p>
+          <a href="../station/hutamatashimmachi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4720af0bd6a34b5ca3fb6aae53c48b5c~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4720af0bd6a34b5ca3fb6aae53c48b5c~mv2.png" alt="南船橋駅">
