--- a/station/utsunomiya.html
+++ b/station/utsunomiya.html
@@ -41,7 +41,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_f0752e39710749dfaa274ed8f4d9eeab~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_f0752e39710749dfaa274ed8f4d9eeab~mv2.png" alt="赤羽駅"> -->
           <div class="platform">
             <h2>1番線 -東北新幹線下り</h2>
-            <p>ベル 【未収録】</p>
+            <p>JRE-IKST-101-01(東北101-1番) 【未収録】</p>
           </div>
 <!--           <a href="../platform/utsunomiya_1.html"></a> -->
         </div>
@@ -49,7 +49,7 @@
 <!--           <img src="https://static.wixstatic.com/media/0acb38_d1521ca090bd41628aa6c764dec77a89~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_d1521ca090bd41628aa6c764dec77a89~mv2.png" alt="赤羽駅"> -->
           <div class="platform">
             <h2>4番線 -東北新幹線上り</h2>
-            <p>ベル 【未収録】</p>
+            <p>JRE-IKST-101-02(首都圏101番) 【未収録】</p>
           </div>
 <!--           <a href="../platform/utsunomiya_4.html"></a> -->
         </div>
