--- a/ikst/ikst.html
+++ b/ikst/ikst.html
@@ -42,7 +42,7 @@
         <div class="message" id="message"></div>
         <script>
           const messages = [
-            "2026/2/6 青森駅・一ノ関駅(在来線) メロディ変更",
+            "2026/2/9 宇都宮駅(新幹線)・小山駅(新幹線) メロディ変更",
           ];
 
           const messageElem = document.getElementById("message");
