--- a/thanks.html
+++ b/thanks.html
@@ -2210,6 +2210,34 @@
             <td>When Your Heart Makes A Wish verB</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
+          <tr>
+            <td>首都圏31番</td>
+            <td>lleo2201様</td>
+          </tr>
+          <tr>
+            <td>上田#1 発車放送</td>
+            <td>lleo2201様</td>
+          </tr>
+          <tr>
+            <td>上田#2 発車放送</td>
+            <td>lleo2201様</td>
+          </tr>
+          <tr>
+            <td>上田#1(しなの鉄道) 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
+          <tr>
+            <td>Gota Del Vient 標準ver</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
+          <tr>
+            <td>上田#2(しなの鉄道) 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>          
+          <tr>
+            <td>上田#3(しなの鉄道) 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
