--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.8 京葉線 舞浜駅･#1･#2(2016/4/5導入「When Your Heart Makes A Wish」〜2025/6/6導入「A Whole New World」「It's a Small World V2」まで)・潮見駅･#1･#2･#1(旧)･#2(旧)・市川塩浜駅･#1･#2･#1(旧)･#2(旧)・二俣新町駅･#1･#2･#1(旧)･#2(旧)",
+            text: "【ページ追加】2026.2.9 北陸新幹線等 上田駅･#1･#2･#1(しなの鉄道)~#3(しなの鉄道)",
             url: null
           },
           {
