--- a/thanks.html
+++ b/thanks.html
@@ -2238,6 +2238,26 @@
             <td>上田#3(しなの鉄道) 戸閉放送</td>
             <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
           </tr>
+          <tr>
+            <td>Forever Love</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
+          <tr>
+            <td>浜千鳥 館山ver</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>館山#1 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
+          <tr>
+            <td>館山#2 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
+          <tr>
+            <td>館山#3 戸閉放送</td>
+            <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
