--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.9 北陸新幹線等 上田駅･#1･#2･#1(しなの鉄道)~#3(しなの鉄道)",
+            text: "【ページ追加】2026.2.9 北陸新幹線等 上田駅･#1･#2･#1(しなの鉄道)~#3(しなの鉄道)・内房線 館山駅･#1~#3･#1(旧)~#3(旧)･コンコース",
             url: null
           },
           {
