--- a/jre.html
+++ b/jre.html
@@ -328,6 +328,14 @@
           </div>
           <a href="line/hokuriku_shinkansen.html"></a>
         </div>    
+        <div class="column">
+          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/上越新幹線.jpg" alt="上越新幹線">
+          <div class="line">
+<!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
+            <p>上越新幹線</p>
+          </div>
+          <a href="line/joetsu_shinkansen.html"></a>
+        </div>    
       </div>
       <div class="container">
         <div class="column">
@@ -339,14 +347,6 @@
           <a href="line/tohoku_shinkansen.html"></a>
         </div>   
         <div class="column">
-          <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/山形新幹線.jpg" alt="山形新幹線">
-          <div class="line">
-<!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
-            <p>山形新幹線</p>
-          </div>
-          <a href="line/yamagata_shinkansen.html"></a>
-        </div>    
-        <div class="column columnj" style="visibility: hidden;">
           <img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/山形新幹線.jpg" alt="山形新幹線">
           <div class="line">
 <!--             <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/image-removebg-preview%20(30).png?v=1743655685173"> -->
