--- a/thanks.html
+++ b/thanks.html
@@ -209,6 +209,10 @@
             <td>半蔵門線</td>
             <td><a href="https://x.com/i/user/1603307856136003585">ジャジャ様</a></td>
           </tr>         
+          <tr>
+            <td>上越新幹線</td>
+            <td><a href="https://x.com/i/user/1246818704488198146">なろさん様</a></td>
+          </tr>    
         </tbody>
       </table>
       <h1>サイトBGM提供</h1>
