--- a/thanks.html
+++ b/thanks.html
@@ -2219,6 +2219,10 @@
             <td>lleo2201様</td>
           </tr>
           <tr>
+            <td>首都圏31-1番</td>
+            <td>lleo2201様</td>
+          </tr>
+          <tr>
             <td>上田#1 発車放送</td>
             <td>lleo2201様</td>
           </tr>
@@ -2261,6 +2265,22 @@
           <tr>
             <td>館山#3 戸閉放送</td>
             <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
+          </tr>
+          <tr>
+            <td>首都圏30番</td>
+            <td>lleo2201様</td>
+          </tr>
+          <tr>
+            <td>首都圏30-1番</td>
+            <td>lleo2201様</td>
+          </tr>
+          <tr>
+            <td>本庄早稲田#1 発車放送</td>
+            <td>lleo2201様</td>
+          </tr>
+          <tr>
+            <td>本庄早稲田#2 発車放送</td>
+            <td>lleo2201様</td>
           </tr>
         </tbody>
       </table>
