--- a/platform/maihama_1_o1.html
+++ b/platform/maihama_1_o1.html
@@ -185,6 +185,8 @@
           <option value="maihama_1_o3.html">Zip-A-Dee-Doo-Dah</option>
           <option value="maihama_1_o4.html">Brand New Day verA</option>
           <option value="maihama_1_o5.html">When Your Heart Makes A Wish verA</option>
+          <option value="maihama_1_o6.html">Let It Go〜ありのままで〜 V1</option>
+          <option value="maihama_1_o7.html">Happiness Is Here verA</option>
         </select>
 
       
