--- a/platform/maihama_1_o5.html
+++ b/platform/maihama_1_o5.html
@@ -185,6 +185,8 @@
           <option value="maihama_1_o2.html">君の願いが世界を輝かす</option>
           <option value="maihama_1_o3.html">Zip-A-Dee-Doo-Dah</option>
           <option value="maihama_1_o4.html">Brand New Day verA</option>
+          <option value="maihama_1_o6.html">Let It Go〜ありのままで〜 V1</option>
+          <option value="maihama_1_o7.html">Happiness Is Here verA</option>
         </select>
 
       
