--- a/platform/maihama_2_o4.html
+++ b/platform/maihama_2_o4.html
@@ -185,6 +185,8 @@
           <option value="maihama_2_o2.html">Living in Color</option>
           <option value="maihama_2_o3.html">It's a Small World V1</option>
           <option value="maihama_2_o5.html">When Your Heart Makes A Wish verB</option>
+          <option value="maihama_2_o6.html">生まれてはじめて</option>
+          <option value="maihama_2_o7.html">Happiness Is Here verB</option>
         </select>
 
       
