--- a/thanks.html
+++ b/thanks.html
@@ -2282,6 +2282,30 @@
             <td>本庄早稲田#2 発車放送</td>
             <td>lleo2201様</td>
           </tr>
+          <tr>
+            <td>Let It Go〜ありのままで〜 V1</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>生まれてはじめて</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>舞浜#1(ATOS化前) 戸閉放送</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>舞浜#2(ATOS化前) 戸閉放送</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>Happiness Is Here verA</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>Happiness Is Here verB</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
