--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.9 上越新幹線・同線 本庄早稲田駅･#1･#2・北陸新幹線等 上田駅･#1･#2･#1(しなの鉄道)~#3(しなの鉄道)・内房線 館山駅･#1~#3･#1(旧)~#3(旧)･コンコース",
+            text: "【ページ追加】2026.2.9 上越新幹線・同線 本庄早稲田駅･#1･#2・北陸新幹線等 上田駅･#1･#2･#1(しなの鉄道)~#3(しなの鉄道)・京葉線 舞浜駅 #1･#2(2008/4/15~2009/4/14「魔法の鍵〜Dream Goes On〜」除く全曲)・内房線 館山駅･#1~#3･#1(旧)~#3(旧)･コンコース",
             url: null
           },
           {
