--- a/platform/tateyama_3.html
+++ b/platform/tateyama_3.html
@@ -181,6 +181,7 @@
         <select name="change" id="change" onchange="location.href=value;">
           <option value="tateyama_3.html">Forever Love</option>
           <option value="tateyama_3_o1.html">浜千鳥 館山ver</option>
+          <option value="tateyama_3_o2.html">浜千鳥 旧館山ver</option>
         </select>
       </div>
           <script>
