--- a/thanks.html
+++ b/thanks.html
@@ -2306,6 +2306,10 @@
             <td>Happiness Is Here verB</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
+          <tr>
+            <td>浜千鳥 旧館山ver</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
