--- a/station/kashiwa.html
+++ b/station/kashiwa.html
@@ -74,33 +74,33 @@
           <img src="https://static.wixstatic.com/media/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png" alt="柏駅">
           <div class="platform">
             <h2>1番線 -東武アーバンパークライン上り</h2>
-            <p>突き進め柏</p>
+            <p>突き進め柏 【未収録】</p>
           </div>
-          <a href="../platform/kashiwa_td1.html"></a>
+          <!-- <a href="../platform/kashiwa_td1.html"></a> -->
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png" alt="柏駅">
           <div class="platform">
             <h2>2番線 -東武アーバンパークライン上り</h2>
-            <p>アンゴラ</p>
+            <p>アンゴラ 【未収録】</p>
           </div>
-          <a href="../platform/kashiwa_td2.html"></a>
+          <!-- <a href="../platform/kashiwa_td2.html"></a> -->
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png" alt="柏駅">
           <div class="platform">
             <h2>3番線 -東武アーバンパークライン下り</h2>
-            <p>チュニジア</p>
+            <p>チュニジア 【未収録】</p>
           </div>
-          <a href="../platform/kashiwa_td3.html"></a>
+          <!-- <a href="../platform/kashiwa_td3.html"></a> -->
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png" alt="柏駅">
           <div class="platform">
             <h2>4番線 -東武アーバンパークライン下り</h2>
-            <p>ジョージイタリアーノ</p>
+            <p>ジョージイタリアーノ 【未収録】</p>
           </div>
-          <a href="../platform/kashiwa_td4.html"></a>
+          <!-- <a href="../platform/kashiwa_td4.html"></a> -->
         </div>
       </div>
   </div>
