--- a/thanks.html
+++ b/thanks.html
@@ -2310,6 +2310,22 @@
             <td>浜千鳥 旧館山ver</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
+          <tr>
+            <td>首都圏7番</td>
+            <td><a href="https://x.com/i/user/1542014017010794498">しゃけ様</a></td>
+          </tr>
+          <tr>
+            <td>首都圏7-1番</td>
+            <td><a href="https://x.com/i/user/1542014017010794498">しゃけ様</a></td>
+          </tr>
+          <tr>
+            <td>SF10-31</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>SF22-29 柏ver</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
