--- a/line/joban.html
+++ b/line/joban.html
@@ -70,8 +70,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a852564ed64f4635a33eaf10a8fedb61~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a852564ed64f4635a33eaf10a8fedb61~mv2.png" alt="柏駅">
-          <p>柏駅 【未収録】</p>
-<!--           <a href="../station/kashiwa.html"></a> -->
+          <p>柏駅</p>
+          <a href="../station/kashiwa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_11bfd0e07fa94fcc80123db7e7725ed3~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_11bfd0e07fa94fcc80123db7e7725ed3~mv2.png" alt="我孫子駅">
