--- a/line/joban_local.html
+++ b/line/joban_local.html
@@ -90,8 +90,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_02661b17f6a345ac971178c15212edc1~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_02661b17f6a345ac971178c15212edc1~mv2.png" alt="柏駅">
-          <p>柏駅 【未収録】</p>
-<!--           <a href="../station/kashiwa.html"></a> -->
+          <p>柏駅</p>
+          <a href="../station/kashiwa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_de80899e54b348949e633d5ef4c01af4~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_de80899e54b348949e633d5ef4c01af4~mv2.png" alt="北柏駅">
