--- a/line/tobu_urban_park.html
+++ b/line/tobu_urban_park.html
@@ -155,8 +155,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_a87a22be07074aef8b971ed3edb141df~mv2.png" alt="柏駅">
-          <p>柏駅 【未収録】</p>
-          <!-- <a href="../station/kashiwa.html"></a> -->
+          <p>柏駅</p>
+          <a href="../station/kashiwa.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4abc42c36fcd425f8cd959df213c90ea~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4abc42c36fcd425f8cd959df213c90ea~mv2.png" alt="新柏駅">
