--- a/thanks.html
+++ b/thanks.html
@@ -2326,6 +2326,14 @@
             <td>SF22-29 柏ver</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
+          <tr>
+            <td>SF22-29 金町ver</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
+          <tr>
+            <td>SF2</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
