--- a/line/joban_local.html
+++ b/line/joban_local.html
@@ -55,8 +55,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0556c49395be4f559b39d40ae81f00cc~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0556c49395be4f559b39d40ae81f00cc~mv2.png" alt="金町駅">
-          <p>金町駅 【未収録】</p>
-<!--           <a href="../station/kanamachi.html"></a> -->
+          <p>金町駅</p>
+          <a href="../station/kanamachi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_1321ea4cf57b46e88e2be0c0e8ddae0a~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1321ea4cf57b46e88e2be0c0e8ddae0a~mv2.png" alt="松戸駅">
