--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.10 常磐線等 柏駅･#1~#4･#1(旧)~#4(旧)",
+            text: "【ページ追加】2026.2.10 常磐線等 柏駅･#1~#4･#1(旧)~#4(旧)・金町駅･#1･#2",
             url: null
           },
           {
