--- a/platform/shinurayasu_2.html
+++ b/platform/shinurayasu_2.html
@@ -180,7 +180,7 @@
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
           <option value="shinurayasu_2.html">JRE-IKST-001-02(首都圏15番)</option>
-          <option value="shinurayasu_2_o1.html">See YOu Again</option>
+          <option value="shinurayasu_2_o1.html">See You Again</option>
         </select>
       
       </div>
