--- a/platform/minamifunabashi_2_o1.html
+++ b/platform/minamifunabashi_2_o1.html
@@ -173,8 +173,8 @@
       <div class="arrange">
         <div class="content">
           <h1>南船橋駅 2番線(旧)「森の妖精」</h1>
-          <p>収録駅:南船橋駅2番線</p>
-          <p>スピーカー:JVC横長型・JVC横長新型・FPS</p>
+          <p>収録駅:市川駅1番線</p>
+          <p>スピーカー:JVC横長型・JVC横長新型・FPS(南船橋)</p>
         
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
