--- a/station/minamifunabashi.html
+++ b/station/minamifunabashi.html
@@ -50,9 +50,9 @@
           <img src="https://static.wixstatic.com/media/0acb38_4720af0bd6a34b5ca3fb6aae53c48b5c~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4720af0bd6a34b5ca3fb6aae53c48b5c~mv2.png" alt="南船橋駅">
           <div class="platform">
             <h2>2番線 -武蔵野線上り</h2>
-            <p>JRE-IKST-002-02(首都圏17番) 【未収録】</p>
+            <p>JRE-IKST-002-02(首都圏17番)</p>
           </div>
-          <!-- <a href="../platform/minamifunabashi_2.html"></a> -->
+          <a href="../platform/minamifunabashi_2.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_4720af0bd6a34b5ca3fb6aae53c48b5c~mv2.png/v1/fill/w_317,h_382,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_4720af0bd6a34b5ca3fb6aae53c48b5c~mv2.png" alt="南船橋駅">
