--- a/station/kemigawahama.html
+++ b/station/kemigawahama.html
@@ -50,9 +50,9 @@
           <img src="https://static.wixstatic.com/media/0acb38_523bafdc256c44b6b3690b935ed6cfe1~mv2.png/v1/fill/w_513,h_618,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_523bafdc256c44b6b3690b935ed6cfe1~mv2.png" alt="検見川浜駅">
           <div class="platform">
             <h2>2番線 -京葉線上り</h2>
-            <p>JRE-IKST-001-01(首都圏15-1番) 【未収録】</p>
+            <p>JRE-IKST-001-01(首都圏15-1番)</p>
           </div>
-<!--           <a href="../platform/kemigawahama_2.html"></a> -->
+          <a href="../platform/kemigawahama_2.html"></a>
         </div>
       </div>
   </div>
