--- a/line/keiyo.html
+++ b/line/keiyo.html
@@ -115,13 +115,13 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0ca1e3a77f7f42c59ee5cac32ec0ef77~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0ca1e3a77f7f42c59ee5cac32ec0ef77~mv2.png" alt="稲毛海岸駅">
-          <p>稲毛海岸駅 【未収録】</p>
-<!--           <a href="../station/inagekaigan.html"></a> -->
+          <p>稲毛海岸駅</p>
+          <a href="../station/inagekaigan.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_930182d6bac84a8b94bc0a8695c29ef9~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_930182d6bac84a8b94bc0a8695c29ef9~mv2.png" alt="千葉みなと駅">
-          <p>千葉みなと駅 【未収録】</p>
-<!--           <a href="../station/chibaminato.html"></a> -->
+          <p>千葉みなと駅</p>
+          <a href="../station/chibaminato.html"></a>
         </div>
         <div class="column">
           <!-- <img src="https://static.wixstatic.com/media/0acb38_449d5062db26436eb8e4413d861c32a3~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_449d5062db26436eb8e4413d861c32a3~mv2.png" alt="蘇我駅"> -->
