--- a/thanks.html
+++ b/thanks.html
@@ -2334,6 +2334,22 @@
             <td>SF2</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
+          <tr>
+            <td>ドリームタイム</td>
+            <td><a href="https://x.com/i/user/1654766860506906625">びゅーやまなし様</a></td>
+          </tr>
+          <tr>
+            <td>公園通り</td>
+            <td><a href="https://x.com/i/user/1654766860506906625">びゅーやまなし様</a></td>
+          </tr>
+          <tr>
+            <td>九月の風V1</td>
+            <td><a href="https://x.com/i/user/1654766860506906625">びゅーやまなし様</a></td>
+          </tr>
+          <tr>
+            <td>首都圏15-4番</td>
+            <td>SUBARU TRAIN様</td>
+          </tr>
         </tbody>
       </table>
     </div>
