--- a/platform/shinnarashino_2.html
+++ b/platform/shinnarashino_2.html
@@ -7,7 +7,7 @@
   <meta name="description" content="新習志野駅2番線の発車メロディ「JRE-IKST-001-07(首都圏15-2番)」の再現ができます！">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" />
-  <link rel="stylesheet" href="shinurayasu_2.css">
+  <link rel="stylesheet" href="shinnarashino_2.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
   <meta property="og:description" content="新習志野駅2番線の発車メロディ「JRE-IKST-001-07(首都圏15-2番)」の再現ができます！">
   <meta property="og:title" content="新習志野駅2番線「JRE-IKST-001-07(首都圏15-2番)」｜どこでもステーションベル">
@@ -179,8 +179,8 @@
         </div>
         <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
         <select name="change" id="change" onchange="location.href=value;">
-          <option value="shinurayasu_2.html">JRE-IKST-001-07(首都圏15-2番)</option>
-          <option value="shinurayasu_2_o1.html">夏色の時間</option>
+          <option value="shinnarashino_2.html">JRE-IKST-001-07(首都圏15-2番)</option>
+          <option value="shinnarashino_2_o1.html">夏色の時間</option>
         </select>
       
       </div>
