--- a/thanks.html
+++ b/thanks.html
@@ -2350,6 +2350,14 @@
             <td>首都圏15-4番</td>
             <td>SUBARU TRAIN様</td>
           </tr>
+          <tr>
+            <td>首都圏15-3番</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
+          <tr>
+            <td>夏色の時間</td>
+            <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
