--- a/line/keiyo.html
+++ b/line/keiyo.html
@@ -75,8 +75,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_381bdf2d40064719ad30bed201c4583c~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_381bdf2d40064719ad30bed201c4583c~mv2.png" alt="新浦安駅">
-          <p>新浦安駅 【未収録】</p>
-<!--           <a href="../station/shinurayasu.html"></a> -->
+          <p>新浦安駅</p>
+          <a href="../station/shinurayasu.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_e283c1dad0b14c1fb55161d056226e11~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_e283c1dad0b14c1fb55161d056226e11~mv2.png" alt="市川塩浜駅">
@@ -95,8 +95,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_5d7ffc6056aa46fd9b6b4b43f29ba9f9~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_5d7ffc6056aa46fd9b6b4b43f29ba9f9~mv2.png" alt="新習志野駅">
-          <p>新習志野駅 【未収録】</p>
-<!--           <a href="../station/shinnnarashino.html"></a> -->
+          <p>新習志野駅</p>
+          <a href="../station/shinnnarashino.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_2c6ba46739c64f0fa2684819dd440af9~mv2.png/v1/fill/w_332,h_399,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_2c6ba46739c64f0fa2684819dd440af9~mv2.png" alt="幕張豊砂駅">
