--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <script>
         const messages = [
           {
-            text: "【ページ追加】2026.2.11 京葉線 南船橋駅 #1~#4･#1(旧)~#3(旧)・検見川浜駅 #2・稲毛海岸駅･#1･#2･#1(旧)･#2(旧)・千葉みなと駅･#1~#3･#1(旧)~#3(旧)",
+            text: "【ページ追加】2026.2.11 京葉線 全駅追加完了：南船橋駅 #1~#4･#1(旧)~#3(旧)・検見川浜駅 #2・稲毛海岸駅･#1･#2･#1(旧)･#2(旧)・千葉みなと駅･#1~#3･#1(旧)~#3(旧)・新浦安駅･#1~#4･#1(旧)~#4(旧)・新習志野駅･#1~#4･#1(旧)~#4(旧)",
             url: null
           },
           {
