--- a/line/sobu.html
+++ b/line/sobu.html
@@ -116,7 +116,7 @@
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_28e31f4b408945aeaf2e1f39ed29744c~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_28e31f4b408945aeaf2e1f39ed29744c~mv2.png" alt="飯田橋駅">
           <p>飯田橋駅</p>
-          <a href="../station/idabashi.html"></a>
+          <a href="../station/iidabashi.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_fb34e9b2deec45c3a247cf7b279e2e05~mv2.png/v1/fill/w_451,h_542,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_fb34e9b2deec45c3a247cf7b279e2e05~mv2.png" alt="水道橋駅">
