--- a/station/kaihimmakuhari.html
+++ b/station/kaihimmakuhari.html
@@ -41,7 +41,7 @@
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_65170a72f6a84e21927b64bbf5b97c2d~mv2.png/v1/fill/w_1024,h_1232,al_c,q_90,enc_auto/0acb38_65170a72f6a84e21927b64bbf5b97c2d~mv2.png" alt="海浜幕張駅">
           <div class="platform">
-            <h2>1番線 -京葉線上り</h2>
+            <h2>1番線 -京葉線下り</h2>
             <p>We Love Marines</p>
           </div>
           <a href="../platform/kaihimmakuhari_1.html"></a>
