--- a/thanks.html
+++ b/thanks.html
@@ -2348,7 +2348,7 @@
           </tr>
           <tr>
             <td>首都圏15-4番</td>
-            <td>SUBARU TRAIN様</td>
+            <td><a href="https://x.com/i/user/1542014017010794498">しゃけ様</a></td>
           </tr>
           <tr>
             <td>首都圏15-3番</td>
