--- a/locate.html
+++ b/locate.html
@@ -5,7 +5,7 @@
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="あの思い出を、もう一度。位置情報で駅メロを蘇らせよう！">
-  <link rel="icon" href="https://github.com/ssmn93/depart-melody/blob/main/picture/横須賀線アイコン.png?raw=true" />
+  <link rel="icon" href="https://github.com/ssmn93/depart-melody/blob/main/picture/横須賀線アイコン.png?raw=true" id="icon" />
   <link rel="stylesheet" href="locate.css">
   <meta property="og:image" content="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/tv_onsei.png?v=1743405036680">
   <meta property="og:description" content="あの思い出を、もう一度。位置情報で駅メロを蘇らせよう！">
@@ -19,7 +19,7 @@
   <header>
     <div class="header-left">
       <a href="https://ssmn93.github.io/depart-melody/locate.html" class="title-link">
-        <img src="https://github.com/ssmn93/depart-melody/blob/main/picture/横須賀線アイコン.png?raw=true" alt="アイコン" class="logo">
+        <img src="https://github.com/ssmn93/depart-melody/blob/main/picture/横須賀線アイコン.png?raw=true" alt="アイコン" class="logo" id="header">
         <h1 class="title">ここからステーションベル</h1>
       </a>
     </div>
@@ -1006,6 +1006,8 @@
                   document.getElementById('keiyo_us').style.display = "none";
                   document.getElementById('keiyo_ds').style.display = "none";
                   document.getElementById('time_nambu').min = "2023-08-06";
+                  document.getElementById('icon').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/南武線.png";
+                  document.getElementById('header').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/南武線.png";
                 } else if (id == 'jr_nambu_d') {
                   document.getElementById('nambu_us').style.display = "none";
                   document.getElementById('nambu_ds').style.display = "";
@@ -1016,6 +1018,8 @@
                   document.getElementById('keiyo_us').style.display = "none";
                   document.getElementById('keiyo_ds').style.display = "none";
                   document.getElementById('time_nambu').min = "2023-08-06";
+                  document.getElementById('icon').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/南武線.png";
+                  document.getElementById('header').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/南武線.png";
                 } else if (id == 'jr_abiko_u') {
                   document.getElementById('nambu_us').style.display = "none";
                   document.getElementById('nambu_ds').style.display = "none";
@@ -1026,6 +1030,8 @@
                   document.getElementById('keiyo_us').style.display = "none";
                   document.getElementById('keiyo_ds').style.display = "none";
                   document.getElementById('time_nambu').min = "2017-02-09";
+                  document.getElementById('icon').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/我孫子支線.png";
+                  document.getElementById('header').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/我孫子支線.png";
                 } else if (id == 'jr_abiko_d') {
                   document.getElementById('nambu_us').style.display = "none";
                   document.getElementById('nambu_ds').style.display = "none";
@@ -1036,6 +1042,8 @@
                   document.getElementById('keiyo_us').style.display = "none";
                   document.getElementById('keiyo_ds').style.display = "none";
                   document.getElementById('time_nambu').min = "2017-02-09";
+                  document.getElementById('icon').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/我孫子支線.png";
+                  document.getElementById('header').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/我孫子支線.png";
                 } else if (id == 'jr_sotobo_u') {
                   document.getElementById('nambu_us').style.display = "none";
                   document.getElementById('nambu_ds').style.display = "none";
@@ -1046,6 +1054,8 @@
                   document.getElementById('keiyo_us').style.display = "none";
                   document.getElementById('keiyo_ds').style.display = "none";
                   document.getElementById('time_nambu').min = "2018-11-20";
+                  document.getElementById('icon').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/外房線.png";
+                  document.getElementById('header').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/外房線.png";
                 } else if (id == 'jr_sotobo_d') {
                   document.getElementById('nambu_us').style.display = "none";
                   document.getElementById('nambu_ds').style.display = "none";
@@ -1056,6 +1066,8 @@
                   document.getElementById('keiyo_us').style.display = "none";
                   document.getElementById('keiyo_ds').style.display = "none";
                   document.getElementById('time_nambu').min = "2018-11-20";
+                  document.getElementById('icon').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/外房線.png";
+                  document.getElementById('header').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/外房線.png";
                 } else if (id == 'jr_keiyo_u') {
                   document.getElementById('nambu_us').style.display = "none";
                   document.getElementById('nambu_ds').style.display = "none";
@@ -1066,6 +1078,8 @@
                   document.getElementById('keiyo_us').style.display = "";
                   document.getElementById('keiyo_ds').style.display = "none";
                   document.getElementById('time_nambu').min = "2016-09-25";
+                  document.getElementById('icon').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/京葉線.png";
+                  document.getElementById('header').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/京葉線.png";
                 } else if (id == 'jr_keiyo_d') {
                   document.getElementById('nambu_us').style.display = "none";
                   document.getElementById('nambu_ds').style.display = "none";
@@ -1076,6 +1090,8 @@
                   document.getElementById('keiyo_us').style.display = "none";
                   document.getElementById('keiyo_ds').style.display = "";
                   document.getElementById('time_nambu').min = "2016-09-25";
+                  document.getElementById('icon').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/京葉線.png";
+                  document.getElementById('header').href = "https://github.com/ssmn93/depart-melody/blob/main/picture/京葉線.png";
                 }
               }
               
