--- a/platform/iwaki_2.html
+++ b/platform/iwaki_2.html
@@ -176,8 +176,12 @@
           <p>収録駅:いわき駅1番線</p>
           <p>スピーカー:小丸VOSS・天井型</p>
         
-          <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
+        <label  style="margin-left: 20px;"><input type="checkbox" id="buttonon">ボタン音オフ</label>
+        <select name="change" id="change" onchange="location.href=value;">
+          <option value="iwaki_2.html">フラガール〜虹を〜</option>
+          <option value="iwaki_2_o1.html">ます</option>
+        </select>
       </div>
           <script>
       const audio = document.getElementById("melody");
