--- a/thanks.html
+++ b/thanks.html
@@ -2358,6 +2358,10 @@
             <td>夏色の時間</td>
             <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
           </tr>
+          <tr>
+            <td>ます</td>
+            <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
