--- a/support.html
+++ b/support.html
@@ -45,7 +45,7 @@
       <div class="container">
         <div class="column">
           <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/machine_yubisashi_kosyou.png?v=1743404751963" alt="間違い">
-          <p>画像・音声等の間違い</p>
+          <p>画像・音声等の間違い<br>【回答受付停止中】</p>
           <a href="https://docs.google.com/forms/d/e/1FAIpQLScj7bMotDEha9o19Xj0SKdM1hkPS2uSKgn1FuIEtZtlM8DbCw/viewform?usp=header"></a>
         </div>
         <div class="column">
@@ -60,7 +60,7 @@
         </div>
         <div class="column">
           <img src="https://cdn.glitch.global/f6b8403f-df22-44d1-8c21-1151b6811bd0/%E3%83%80%E3%82%A6%E3%83%B3%E3%83%AD%E3%83%BC%E3%83%89%20(18).png?v=1744808049029" alt="要望等">
-          <p>discord サポートサーバー</p>
+          <p>discord サポートサーバー<br>間違い報告・質問等はこちらから</p>
           <a href="https://discord.gg/TckNP55CFF"></a>
         </div>        
       </div>
