--- a/platform/yotsukaido_0.html
+++ b/platform/yotsukaido_0.html
@@ -173,8 +173,8 @@
       <div class="arrange">
         <div class="content">
           <h1>四街道駅 0番線「Verde Rayo 標準遅テンポver」</h1>
-          <p>収録駅:四街道駅0番線</p>
-          <p>スピーカー:小丸VOSS</p>
+          <p>収録駅:君津駅1番線</p>
+          <p>スピーカー:小丸VOSS(四街道)</p>
         
           <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
         </div>
