--- a/locate.html
+++ b/locate.html
@@ -37,9 +37,7 @@
     </div>
     <div class="main">
     <div class="melody">
-    <!-- <audio id="melody" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%9C%9D%E3%81%AE%E9%9D%99%E3%81%91%E3%81%95.mp3"></audio>
-    <audio id="tojime" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/%E6%88%B8%E9%96%89%E6%94%BE%E9%80%81_%E7%94%B7%E5%A3%B01%E7%95%AA.mp3"></audio>
-    <audio id="button" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/button.mp3"></audio> -->
+    <audio id="change" src="https://raw.githubusercontent.com/ssmn93/dokobell_melody/main/4点チャイム_大阪メトロ中央線西行.mp3"></audio>
       <div class="arrange">
         <iframe id="station-iframe" src="https://ssmn93.github.io/depart-melody/platform/tokyo_9_o.html" style="width:100%;height:480px;" data-station-id="" data-platform=""></iframe>
       </div>
@@ -1404,6 +1402,9 @@
             
               lastSwitchTime = now;
               console.log('iframe 切替 ->', cand.radioId, cand.iframeUrl);
+              const changeon = document.getElementById("changeon");
+              const change = document.getElementById("change");
+              if (!changeon.checked) change.play();
             }
           
             function getCurrentPositionPromise(options = { enableHighAccuracy: true, maximumAge: 0, timeout: 10000 }){
@@ -1597,6 +1598,7 @@
           <h1>共通設定</h1>
             <div class="buttons" id="buttons">
               <label><input type="checkbox" id="buttonon">ボタン音オフ</label>
+              <label><input type="checkbox" id="changeon">切替通知音オフ</label>
               <label><input type="checkbox" id="placeoff">位置情報オフ</label>
               <label>タイムスリップ:<input type="date" id="time_nambu" name="time_nambu" min="2023-08-06"></label>
             </div>
