--- a/thanks.html
+++ b/thanks.html
@@ -2358,6 +2358,10 @@
             <td>ます</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
+          <tr>
+            <td>4点チャイム(大阪メトロ中央線西行)</td>
+            <td><a href="https://x.com/i/user/1528965644452253696">中田葦様</a></td>
+          </tr>
         </tbody>
       </table>
     </div>
