--- a/platform/tateyama_2_o2.html
+++ b/platform/tateyama_2_o2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
@@ -264,5 +264,32 @@
       鉄道モバイル:<a href="https://www.te2do.jp">https://www.te2do.jp</a>
     </p>
   </footer>
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta content="text/html; charset=UTF-8">  
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="このサイトでは、発車メロディを再現することができます！">
+  <link rel="icon" href="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png">
+  <link rel="stylesheet" href="onsei_suspend.css">
+  <meta property="og:image" content="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png">
+  <meta property="og:description" content="このサイトでは、発車メロディを再現することができます！">
+  <meta property="og:title" content="音声公開停止のお知らせ｜どこでもステーションベル">
+  <meta property="og:url" content="https://ssmn93.github.io/depart-melody/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:site_name" content="音声公開停止のお知らせ｜どこでもステーションベル">
+  <title>音声公開停止のお知らせ｜どこでもステーションベル</title>
+</head>
+<body>
+    <div class="main">
+      <a href="https://ssmn93.github.io/depart-melody/"><img src="https://raw.githubusercontent.com/ssmn93/depart-melody/main/picture/e233yo.png" width="60" height="60" alt="Logo"></a>
+      <h2>音声公開停止のお知らせ</h2>
+      <p>こちらのページにて公開しておりました音声は、提供者による無断転載の可能性があるため、一時的に公開を停止しております。ご不便をおかけしますが、何卒ご了承ください。</p>
+    </div>
 </body>
 </html>
