--- a/thanks.html
+++ b/thanks.html
@@ -2083,19 +2083,19 @@
             <td><a href="https://x.com/i/user/2676638293">C.H.Lover様</a></td>
           </tr>
           <tr>
-            <td>遠い青空V2</td>
+            <td>遠い青空V2 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>佐野#1 旧戸閉放送</td>
+            <td>佐野#1 旧戸閉放送 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>春になったら verA</td>
+            <td>春になったら verA 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>春になったら verB</td>
+            <td>春になったら verB 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
@@ -2195,19 +2195,19 @@
             <td><a href="https://x.com/i/user/1426497394565292032">鉄道チャンネル様</a></td>
           </tr>
           <tr>
-            <td>Brand New Day verA</td>
+            <td>Brand New Day verA 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>Brand New Day verB</td>
+            <td>Brand New Day verB 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>When Your Heart Makes A Wish verA</td>
+            <td>When Your Heart Makes A Wish verA 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>When Your Heart Makes A Wish verB</td>
+            <td>When Your Heart Makes A Wish verB 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
@@ -2247,7 +2247,7 @@
             <td><a href="https://x.com/i/user/1958851917452648450">房総愛好家&狂い人様</a></td>
           </tr>
           <tr>
-            <td>浜千鳥 館山ver</td>
+            <td>浜千鳥 館山ver 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
@@ -2279,31 +2279,31 @@
             <td>lleo2201様</td>
           </tr>
           <tr>
-            <td>Let It Go〜ありのままで〜 V1</td>
+            <td>Let It Go〜ありのままで〜 V1 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>生まれてはじめて</td>
+            <td>生まれてはじめて 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>舞浜#1(ATOS化前) 戸閉放送</td>
+            <td>舞浜#1(ATOS化前) 戸閉放送 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>舞浜#2(ATOS化前) 戸閉放送</td>
+            <td>舞浜#2(ATOS化前) 戸閉放送 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>Happiness Is Here verA</td>
+            <td>Happiness Is Here verA 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>Happiness Is Here verB</td>
+            <td>Happiness Is Here verB 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>浜千鳥 旧館山ver</td>
+            <td>浜千鳥 旧館山ver 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
@@ -2315,19 +2315,19 @@
             <td><a href="https://x.com/i/user/1542014017010794498">しゃけ様</a></td>
           </tr>
           <tr>
-            <td>SF10-31</td>
+            <td>SF10-31 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>SF22-29 柏ver</td>
+            <td>SF22-29 柏ver 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>SF22-29 金町ver</td>
+            <td>SF22-29 金町ver 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
-            <td>SF2</td>
+            <td>SF2 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
@@ -2355,7 +2355,7 @@
             <td><a href="https://x.com/i/user/1711384521147555840">みたか様</a></td>
           </tr>
           <tr>
-            <td>ます</td>
+            <td>ます 【公開停止中】</td>
             <td><a href="https://youtube.com/channel/UCL9we4p7gPsk4sKE0WzYvwQ">JR東日本発車メロディ保存ch様</a></td>
           </tr>
           <tr>
